@@ -1,5 +1,6 @@
 version 0.9+
 	* Add --locks-only option to cleanup subcommand
+	* Make cache file (for `status` subcommand) configurable
 
 version 0.9 Mon Dec 5 2011 by luispedro
 	* In the presence of a barrier(), rerun the jugfile
